# mind-ai

./: LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: layout.md  layout.zh-CN.md
src/: App.css  App.tsx  config.ts  i18n.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/api/: anthropic.ts  common.ts  deepseek.ts  llm.ts
src/components/: FollowUpInput.tsx  MindMap.tsx  NewDocDialog.tsx  SettingsDialog.tsx  Toolbar.tsx
src/components/edges/: QEdge.tsx
src/components/nodes/: ANode.tsx  RootQNode.tsx
src/interactions/: followUp.ts
src/layout/: balanced.ts  simple.ts
src/lib/: id.ts
src/storage/: file.ts
src/store/: mindmap.ts
